objects/csord__Service_Line_Item__c.object
<CustomObject>
    <description>A billable component of a Service.</description>
    <fields>
        <fullName>UPC_Configuration_Context__c</fullName>
        <description>Tells you the relevant context (BP or not).</description>
        <label>Configuration Context</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Credit Note to which this line item relates</description>
        <inlineHelpText>The Credit Note to which this line item relates</inlineHelpText>
        <label>Credit Note</label>
        <referenceTo>UPC_Credit_Note__c</referenceTo>
        <relationshipLabel>Service line Items</relationshipLabel>
        <relationshipName>Service_line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Discount_Charge_Type__c</fullName>
        <description>Determines the correct text to show on case details</description>
        <formula>IF(csord__Is_Recurring__c, &apos;Recurring&apos;, &apos;One-Off&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines the correct text to show on case details</inlineHelpText>
        <label>Discount Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Discount_Level_Code__c</fullName>
        <formula>IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;50% discount for the first 6 months on recurring Base Cost&apos;), &apos;CLS07&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;50% discount for the first 3 months on recurring Base Cost&apos;), &apos;CLS01&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Free Activation&apos;), &apos;CLS05&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 6 months&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;600&apos;), &apos;186&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 6 months&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;300&apos;), &apos;185&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 12 months&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;300&apos;) &amp;&amp; NOT(CONTAINS(csord__Service__r.Name, &apos;Package&apos;)), &apos;206&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 12 months&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;300&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;Package&apos;), &apos;208&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 12 months&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;600&apos;) &amp;&amp; NOT(CONTAINS(csord__Service__r.Name, &apos;Package&apos;)), &apos;205&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 12 months&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;600&apos;) &amp;&amp; CONTAINS(csord__Service__r.Name, &apos;Package&apos;), &apos;207&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;10% discount on recurring Base Cost&apos;), &apos;CLS06&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Discount on installation costs&apos;), &apos;CLS02&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Discount on activation costs&apos;), &apos;CLS03&apos;, &apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Level Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Discount_Type_Formula__c</fullName>
        <formula>IF(ISPICKVAL(csord__Discount_Type__c, &apos;absolute&apos;), &apos;Amount&apos;,TEXT(csord__Discount_Type__c))</formula>
        <label>Discount Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Price_Recalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if there were any post-order decomposition prices recalculations</description>
        <label>Price Recalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Element_Formula_Temp__c</fullName>
        <formula>IF( csord__Service__r.csordtelcoa__Product_Configuration__r.cscfga__Product_Definition__r.UPC_Product_Abbreviation__c == &apos;BIFP&apos;, &apos;BIFP Recurring Charge&apos;, &apos;&apos;)</formula>
        <label>Taifun Product Element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Promotion_Name__c</fullName>
        <formula>IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;50% discount for the first 6 months on recurring Base Cost&apos;), &apos;50% discount for the first 6 months on recurring Base Cost&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;50% discount for the first 3 months on recurring Base Cost&apos;), &apos;50% discount for the first 3 months on recurring Base Cost&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Free Activation&apos;), &apos;Free Activation&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 6 months&apos;), &apos;SOHO Promo Q1/2019&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Promotion: 49.– for the first 12 months&apos;), &apos;SOHO Promo Q2/2019&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;10% discount on recurring Base Cost&apos;), &apos;10% discount on recurring Base Cost&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Discount on installation costs&apos;), &apos;Discount on installation costs&apos;, 
IF(CONTAINS(csordtelcoa__Line_Item_Reference_Id__c, &apos;Discount on activation costs&apos;), &apos;Discount on activation costs&apos;, &apos;&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunProductElement_InternalName__c</fullName>
        <description>Stores Taifun provisioning name</description>
        <label>Taifun Product Element Internal Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunProductElement_Number__c</fullName>
        <description>Stores Taifun provisioning number</description>
        <label>Taifun Product Element Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TaifunProductElement_Type__c</fullName>
        <description>Stores Taifun provisioning number</description>
        <label>Taifun Product Element Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Taifun_ProductElement_Parameter__c</fullName>
        <description>Stores Taifun provisioning parameter (if applicable)</description>
        <label>Taifun Product Element Parameter</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Discount_Type__c</fullName>
        <description>What type of discount to apply. The value of this field determines whether the Discount Amount or Discount Percentage value is used.</description>
        <inlineHelpText>Type of the discount applied.</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Discount_Value__c</fullName>
        <description>The value of the discount. The value in interpreted either as an amount or a percentage, depending on the Discount Type field.</description>
        <inlineHelpText>Depending on the Discount Type field either a percentage or an amount.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__Discounted_Amount__c</fullName>
        <description>Discounted amount value</description>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes if the item is active</description>
        <inlineHelpText>Denotes if the item is active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Is_Adhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Service Line Item as an Adhoc Line Item. Default value of &quot;false&quot;/&quot;unchecked&quot; represents a normal Service Line Item.</description>
        <inlineHelpText>Identifies the Service Line Item as an Adhoc Line Item. Default value of &quot;false&quot;/&quot;unchecked&quot; represents a normal Service Line Item.</inlineHelpText>
        <label>Is Adhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item is a recurring item.</description>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Line_Number__c</fullName>
        <displayFormat>OL{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Service line Items</relationshipLabel>
        <relationshipName>Service_line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Price_Before_Discount__c</fullName>
        <label>Price Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Service__c</fullName>
        <description>The parent Service of this ServiceLineItem.</description>
        <inlineHelpText>The parent Service of this ServiceLineItem.</inlineHelpText>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Service line Items</relationshipLabel>
        <relationshipName>Service_line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csord__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__line_item_type__c</fullName>
        <label>Line Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Discount Charge</fullName>
                </value>
                <value>
                    <fullName>Time Limited Discount Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__offset__c</fullName>
        <label>Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Cancelled_By_Change_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled By Change Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Line_Item_Reference_Id__c</fullName>
        <label>Line Item Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Line Item</label>
    <listViews>
        <fullName>csord__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>